force-app/main/default/objects/BLN_RecCasePriority__mdt/BLN_RecCasePriority__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-6164 For Recovery Case Priority, this metadata will hold information on Priority conditions and these conditions are used for identifying the case priorities.</description>
    <label>Recovery Case Priority</label>
    <pluralLabel>Recovery Case Priorities</pluralLabel>
</CustomObject>