force-app/main/default/objects/BLN_RecCasePriority__mdt/fields/BLN_Active__c.field-meta.xml
<CustomField>
    <fullName>BLN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6164 This field is use to check custom metadata is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>