force-app/main/default/objects/BLN_RecCasePriority__mdt/fields/BLN_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>BLN_FieldAPIName__c</fullName>
    <description>FOUK-6164 For Field API Name</description>
    <label>Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>