force-app/main/default/objects/BLN_RecCasePriority__mdt/fields/BLN_FieldValue__c.field-meta.xml
<CustomField>
    <fullName>BLN_FieldValue__c</fullName>
    <description>FOUK-6164 To Store Field Value</description>
    <label>Field Value</label>
    <length>60</length>
    <type>Text</type>
</CustomField>