force-app/main/default/objects/BLN_RecCasePriority__mdt/fields/BLN_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ObjectName__c</fullName>
    <description>FOUK-6164 To store object value for metadata</description>
    <label>Object API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>