force-app/main/default/objects/BLN_RecCasePriority__mdt/fields/BLN_Priority__c.field-meta.xml
<CustomField>
    <fullName>BLN_Priority__c</fullName>
    <description>FOUK-6164 To Store Priority on Case</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <default>true</default>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>